# tauq

./: .gitignore  API_GATEWAY_SUMMARY.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  IMPLEMENTATION_SUMMARY.md  LICENSE  PHASE1_COMPLETE.md  PHASE2_PROGRESS.md  PHASE3_PROGRESS.md  README.md  SECURITY_AUDIT_REPORT.md  TBF_ACTION_PLAN.md  TBF_COMPETITIVE_ANALYSIS.md  TBF_PHASE1_IMPLEMENTATION.md  TBF_SOTA_INDEX.md  TBF_SOTA_ROADMAP.md  TBF_SOTA_SUMMARY.md  WEEK8_BENCHMARKS.md  WEEK9_PLAN.md  WEEK9_RESULTS.md  WEEK9_STATUS.md  WORKFLOWS_GUIDE.md  pyproject.toml
.github/internal/: DOGFOOD_FINDINGS.md  SECURITY_AUDIT.md
.github/workflows/: ci.yml  fuzz.yml  release.yml
benches/: binary_format_benchmark.rs  codec_benchmark.rs  compression_real_data.rs  dataset_geospatial.rs  dataset_logs.rs  dataset_metrics.rs  dataset_transactions.rs  tauq_benchmarks.rs  tbf_benchmark.rs
benchmarks/: ACCURACY_ANALYSIS.md  ACCURACY_BENCHMARK_SUMMARY.md  ACCURACY_FIX_SUMMARY.md  ACCURACY_README.md  ADAPTIVE_FORMATTER_DESIGN.md  CRITIQUE_RESPONSE.md  DEEP_NESTING_ANALYSIS.md  Dockerfile  LM_STUDIO_TEST_PLAN.md  METHODOLOGY.md  README.md  REFACTORING_SUMMARY.md  SIMPLE_MODE_SUMMARY.md  accuracy_benchmark.py  accuracy_benchmark_v2.py  benchmark.py  benchmark_comprehensive.py  benchmark_final.py  check_benchmark_progress.sh  check_progress.sh  curl_test_proper.py  debug_accuracy.py  llm_accuracy_benchmark.py  manual_curl_test.sh  run_benchmark.sh  simple_curl_test.sh  test_increased_tokens.py  test_raw_response.py  test_with_cheatsheet.py  token_benchmark.py
benchmarks/outputs/: README.md  analytics-365.csv  analytics-60.csv  tabular-100.csv  tabular-2000.csv  wide-records.csv
benchmarks/outputs/accuracy/: results.json
benchmarks/outputs/accuracy_v2/: results.json
benchmarks/tauq_src/src/: c_bindings.rs  error.rs  python_bindings.rs
benchmarks/tauq_src/src/tauq/: formatter.rs  lexer.rs  parser.rs  tauqq.rs  token.rs
bindings/: README.md
bindings/csharp/: Tauq.cs  Tauq.csproj
bindings/go/: go.mod  tauq.go
bindings/java/: pom.xml
bindings/java/src/main/java/com/tauq/: Tauq.java
bindings/js/: Cargo.toml  README.md  package.json
bindings/js/src/: lib.rs
bindings/python/: README.md  pyproject.toml
bindings/python/tauq/: __init__.py  __init__.pyi
bindings/swift/: Package.swift
bindings/swift/Sources/CTauq/include/: tauq.h
bindings/swift/Sources/Tauq/: Tauq.swift
docs/: book.toml
docs/src/: SUMMARY.md  api-gateway.md  comparison-protobuf.md  installation.md  introduction.md  security.md  transport-helpers.md  usage-guide.md
docs/src/bindings/: README.md  csharp.md  go.md  java.md  javascript.md  python.md  rust.md  swift.md
docs/src/getting_started/: README.md  basics.md  tauq_query.md
docs/src/spec/: README.md  comparison.md  tauq_spec.md  tauqq_spec.md  tbf_spec.md
docs/src/tbf/: README.md  iceberg.md  overview.md  schema_encoding.md
editors/vscode/: README.md  language-configuration.json  package.json
editors/vscode/src/: extension.ts
editors/vscode/syntaxes/: tauq.tmLanguage.json
examples/: README.md
examples/1_basics/: 01_primitives.tqn  02_structures.tqn
examples/2_schemas/: 01_basic_schemas.tqn  02_typed_schemas.tqn  03_schema_blocks.tqn  04_nested_schemas.tqn
examples/3_modularity/: main_config.tqn
examples/3_modularity/modules/: database.tqn  logging.tqn
examples/4_queries/: 01_basics.tqq  02_pipelines.tqq  03_data_transform.tqq
examples/5_real_world/: api_response.tqn  k8s_deployment.tqn
examples/6_minified/: 01_compact.tqn  k8s_deployment.min.tqn
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_parser.rs  fuzz_tbf.rs
include/: tauq.h
src/: c_bindings.rs  error.rs  java_bindings.rs  lib.rs  python_bindings.rs  serde_support.rs
src/tauq/: formatter.rs  lexer.rs  mod.rs  parser.rs  streaming.rs  tauqq.rs  token.rs
src/tbf/: STATISTICS_FORMAT.md  adaptive_encode.rs  batch_encode.rs  bitmap.rs  bloom.rs  codec_decode.rs  codec_encode.rs  columnar.rs  decoder.rs  dictionary.rs  encoder.rs  fast_decode.rs  fast_encode.rs  mod.rs  parallel_encode.rs  predicate_pushdown.rs  schema.rs  schema_encode.rs  serde_impl.rs  simd_decode.rs  stats.rs  stats_collector.rs  traits.rs  ultra_encode.rs  varint.rs
src/tbf_iceberg/: arrow_convert.rs  mod.rs  writer.rs
tbf_derive/: Cargo.toml  README.md
tbf_derive/src/: lib.rs
tests/: auto_use_test.rs  benchmark_validation_test.rs  codec_selection_validation.rs  format_roundtrip_test.rs  generic_object_test.rs  implicit_row_test.rs  named_args_test.rs  production_edge_cases.rs  schema_block_test.rs  string_escape_test.rs  tauq_comprehensive_test.rs  tauq_list_test.rs  tauq_minified_test.rs  tauq_test.rs  tauqq_builtin_test.rs  tauqq_json_test.rs  tauqq_quotes_test.rs  tauqq_test.rs  tbf_compression_validation.rs
