[package]
name = "tauq"
version = "0.1.0"
edition = "2024"
authors = ["Tauq Contributors"]
license = "MIT"
description = "Token-efficient data notation - 44% fewer tokens than JSON (verified with tiktoken)"
repository = "https://github.com/epistates/tauq"
homepage = "https://tauq.org"
documentation = "https://docs.rs/tauq"
readme = "README.md"
keywords = ["serialization", "parser", "llm", "token-efficient", "data-format"]
categories = ["encoding", "parser-implementations", "command-line-utilities"]
include = [
    "src/**/*",
    "tests/**/*",
    "include/**/*",
    "Cargo.toml",
    "Cargo.lock",
    "README.md",
    "LICENSE"
]

[lib]
name = "tauq"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "tauq"
path = "src/bin/tauq.rs"

[[bin]]
name = "tauq-lsp"
path = "src/bin/tauq-lsp.rs"
required-features = ["lsp"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
once_cell = "1.18"
regex = "1.9"
thiserror = "2.0"
pyo3 = { version = "0.20", features = ["extension-module"], optional = true }
rhai = { version = "1.19", optional = true, features = ["serde"] }
tempfile = "3.8"
jni = { version = "0.21", optional = true }
tower-lsp = { version = "0.20.0", optional = true }
tokio = { version = "1.48.0", features = ["full"], optional = true }

[features]
default = ["rhai"]
python-bindings = ["pyo3"]
java-bindings = ["jni"]
lsp = ["tower-lsp", "tokio"]


[dev-dependencies]
