[package]
name = "tauq"
version = "0.1.0"
edition = "2024"
authors = ["Tauq Contributors"]
license = "MIT"
description = "Token-efficient data notation - 44% fewer tokens than JSON (verified with tiktoken)"
repository = "https://github.com/epistates/tauq"
homepage = "https://www.tauq.org"
documentation = "https://docs.rs/tauq"
readme = "README.md"
keywords = ["serialization", "parser", "llm", "token-efficient", "data-format"]
categories = ["encoding", "parser-implementations", "command-line-utilities"]
include = [
    "src/**/*",
    "tests/**/*",
    "include/tauq.h",
    "Cargo.toml",
    "Cargo.lock",
    "README.md"
]

[lib]
name = "tauq"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "tauq"
path = "src/bin/tauq.rs"

[[bin]]
name = "tauq-lsp"
path = "src/bin/tauq-lsp.rs"
required-features = ["lsp"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
once_cell = "1.18"
regex = "1.9"
thiserror = "2.0"
pyo3 = { version = "0.24", features = ["extension-module"], optional = true }
rhai = { version = "1.19", optional = true, features = ["serde"] }
tempfile = "3.8"
ahash = "=0.8.11"
jni = { version = "0.21", optional = true }
tower-lsp = { version = "0.20.0", optional = true }
tokio = { version = "1.48.0", features = ["full"], optional = true }
# Iceberg integration
iceberg = { version = "0.7", optional = true }
arrow-array = { version = "57.0", optional = true }
arrow-schema = { version = "57.0", optional = true }
futures = { version = "0.3", optional = true }
bytes = { version = "1.10", optional = true }
# Performance optimizations (Phase 2)
rayon = { version = "1.8", optional = true }

[features]
default = ["rhai", "performance"]
python-bindings = ["pyo3"]
java-bindings = ["jni"]
lsp = ["tower-lsp", "dep:tokio"]
iceberg = ["dep:iceberg", "dep:arrow-array", "dep:arrow-schema", "dep:futures", "dep:tokio", "dep:bytes"]
performance = ["dep:rayon"]


[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
rand = "0.8"
# Comparison formats for benchmarking
bitcode = { version = "0.6", features = ["serde"] }
bincode = { version = "2.0", features = ["serde"] }
postcard = { version = "1.1", features = ["alloc"] }
rmp-serde = "1.3"

[[bench]]
name = "tauq_benchmarks"
harness = false

[[bench]]
name = "tbf_benchmark"
harness = false

[[bench]]
name = "codec_benchmark"
harness = false

[[bench]]
name = "compression_real_data"
harness = false

[target.'cfg(all(target_arch = "wasm32", target_os = "unknown"))'.dependencies]
getrandom = { version = "0.2", features = ["js"] }
