[package]
name = "tauq-wasm"
version = "0.1.0"
edition = "2024"
description = "Tauq WASM bindings for JavaScript/TypeScript"
license = "MIT"
repository = "https://github.com/epistates/tauq"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-wasm-bindgen = "0.6"
tauq = { path = "../../", default-features = false }

[dev-dependencies]
wasm-bindgen-test = "0.3"
